# eburger

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  environment.yml  main.py  playground.ipynb  postBuild  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pip-audit.yml  pypi.yml  pytest.yml
eburger/: logger.py  main.py  models.py  serializer.py  settings.py  template_utils.py  yaml_parser.py
eburger/templates/: Abiencode.yaml  TransferFrom.yaml  Unsafe_ERC20_Operations.yaml  pragma.yaml  (+19 more)
templates/: poc.yaml  tx_origin_used_for_access_control.yaml  unchecked_call_return.yaml
tests/: test_arguments.py  test_emit_after_external_call.py  test_missing_reentrancy_guard.py  test_missing_zero_address_check.py  test_modifier_without_proper_enforcement.py  test_parse_solidity_ast.py  test_tx_origin_used_for_access_control.py  test_unbounded_loop.py  test_unchecked_call_return.py  test_unchecked_chainlink_oracle_price.py  test_unspecific_pragma_detector.py  test_unverified_from_address_in_transfer.py  test_use_of_approve_with_max_allowance.py  test_use_of_call_or_send_on_payable.py  test_use_of_encodepacked.py  test_use_of_safetransferlib.py  test_use_of_transfer_or_send_on_payable.py  test_use_of_unsafe_mint.py
vulnerable_contracts/: emit_after_external_call.sol  missing_zero_address_check.sol  modifier_without_proper_enforcement.sol  tx_origin_used_for_access_control.sol  unbounded_loop.sol  unchecked_call_return.sol  unspecific_pragma_detector.sol  use_of_encodepacked.sol  use_of_transfer_or_send_on_payable.sol
(+28 files in other folders)
