[tool.poetry]
name = "eburger"
version = "0.1.0"
description = ""
authors = ["tomie <admin@forefy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
black = "^23.11.0"
networkx = "^3.2.1"
pyvis = "^0.3.2"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
