[tool.poetry]
name = "eburger"
version = "1.0.2"
description = ""
authors = ["tomie <admin@forefy.com>"]
readme = "README.md"
include = ["eburger/templates/*.yaml"]

[tool.poetry.scripts]
eburger = 'eburger.main:main'

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"
pyyaml = "^6.0.1"
pygount = "^1.6.1"
prettytable = "^3.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
